assets/css/screen.css
/* ... */
#product-list li {
  display: flex;
  flex-direction: row;
}

#payment-info p:nth-of-type(1):before {
  content: "Card Name: ";
}

#payment-info p:nth-of-type(2):before {
  content: "Card Number: ";
}

#payment-info p:nth-of-type(3):before {
  content: "Expiry Date: ";
}

#payment-info p:nth-of-type(4):before {
  content: "CVV: ";
}

@media (max-width: 31.25em) { /* 500px/16em */
  main > nav {
    flex-direction: column;
    height: max-content;
    width: 100vw;
    background: #fff;
    justify-content: space-between;
    position: fixed;
    top: 0;
    z-index: 100;
    right: -100vw;
    transition: 0.4s;

  }
  .translate {
    right: 0;
  }

  .nothide {
    position: absolute;
    visibility: hidden;
    display: none;
  }
  .hide button {
    width: 100%;
    font-size: 1em;
  }
  .hide {
    display: flex;
    align-self: center;
    justify-content: space-evenly;
  }

  .hide ul {
    display: flex;
    flex-direction: column;
    min-height: 50vh;
    margin-bottom: 50vh;
    justify-content: space-between;
  }
  header button.hide {
    grid-column-start: 3;
    height: 100%;
    padding: 1em;
  }
}

@media (min-width: 25em) { /* 400px/16em */
  #description_container li figure{
    height: 9em;
  }
  #description_container li p:nth-of-type(4){
    display: block;
  }

  #description_container li ul{
    display: flex;
  }
}

@media (min-width: 37.70em) { /* 600px/16em */
  #item-grid{
    grid-template-columns: repeat(3,  minmax(auto, calc(33.3333% - 0.66666em)));
    padding: 1em 0.2em;
  }

  #item-grid li button{
    min-width: 70%;
    max-width: 70%;
  }
}

@media (min-width: 50em) { /* 800px/16em */
  #description_container > li{
    display: grid;
  }
  #description_container li figure{
    height: 100%;
  }

  #description_container li ul{
    flex-direction: column;
  }
  #description_container li p:nth-of-type(1){
    padding-bottom: 0.8em;
  }
  #description_container li p:nth-of-type(3){
    text-align: center;
  }
  #description_container li p:nth-of-type(1){
    font-size: 2em;
  }
  #description_container li p:nth-of-type(3){
    font-size: 1.48em;
  }
  #carousel_container ul{
    left: 109em;
  }
}

form li .error{
  grid-column-start: 1;
  grid-column-end: -1;
  color: #FF2929;
  font-size: 0.75em;
}

@media (min-width: 56.25em) { /* 900px/16 = 56.25em*/
  main {
    display: grid;
    grid-template-columns: 1fr 56.25em 1fr; /* 900px/16 = 56.25em */
  }
  #cart{
    grid-template-columns: repeat(12, 1fr); /* 900px/16 = 56.25em */
    grid-column-gap: 1.5em!important;
    grid-row-gap: 1.2em!important;
  }
  #home {
    display: block;
  }
  #cart #shopping-cart{
    grid-column: span 8;
    grid-row: 1;
    margin-top: 0!important;
    margin-right: 0;
  }
  #cart #order-summary{
    margin-top: 0!important;
    grid-column: span 4;
    grid-row-start: 1;
    grid-row: span 3;
    margin-left: 0;
    /* Mozilla bug */
    width: -moz-available;
  }
  #cart #shipping-address{
    grid-column: span 4;
    grid-row:2;
    margin-right: 0;
  }
  #cart #payment-info{
    grid-column: span 4;
    grid-row:2;
    margin: 0;
  }
  #cart #billing-address{
    grid-column: span 4;
    grid-row:3;
    margin-bottom: 0!important;
    margin-right: 0;
  }

  #home #filter{
    display: none;
  }

  #home #filter.show{
    display: grid;
  }

  #filter {
    position: static;
    display: grid;
    grid-template-columns: repeat(7, max-content);
    height: max-content;
    width: 100vw;
    align-items: center;
    justify-content: center;
    transition: none;
  }

  #filter li{
    flex-direction: row;
    font-size: 0.83em;
    margin: 0 0.2em;
  }

  #filter input{
    width: 5.5em;
  }
  #filter fieldset {
    display: flex;
  }

  #filter fieldset legend {
    float: left;
  }

  #filter legend, #filter label{
    height: max-content;
    margin-right: 0.4em;
    padding-right: 0!important;
  }

  #price-filter input::before{
    content:"$";
    padding-left: 1em;
  }

  body #home #close-filter button:nth-of-type(1){
    display: block;
  }

  #item-grid{
    grid-template-columns: repeat(4, minmax(auto, calc(25% - 0.75em)));
    padding: 1em 2.5em 1em 1.5em;
  }

  select {
    cursor: pointer;
  }
}

@media (hover: hover) {
  /* Scrollbar */
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #2E4E61;
  }

  button:hover {
    background-color: rgb(177 226 255);
  }

  #item-grid li button{
    background-color: transparent;
  }

  #item-grid li button:hover{
    background-color: #B1E2FF;
  }

  #item-grid li button.selected{
    background-color: transparent;
  }

  #item-grid li button.selected:hover{
    background-color: #FFACAC;
  }

  #cart #shopping-cart input[type=number]:hover{
    background-color: #fff!important;
  }

  #cart #order-summary button:hover{
    background-color: rgb(121 172 202 / 90%);
  }

  li input:hover, li select:hover{
    background-color: #B1E2FF!important;
  }

  nav li:hover {
    border-color: #35B4FF;
  }

  li.location:hover {
    padding: 0 0.6em;
    margin: 0;
  }
  #carousel_container ul li:hover p{
    bottom: 0;
  }
}

